--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="hu">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8">
 </head>
 
 <body>
