--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <title>Tokyo 202020</title>
 </head>
 
 <body>
