--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -12,7 +12,7 @@
     <header class="container">
         <div class="row">
             <div class="col">
-                <p class="d-none d-sm-block p-2">Tokyo 202020 – 20 magyar érem a Tokyo 2020 játékokról</p>
+                <h1 class="d-none d-sm-block p-2">Tokyo 202020 – 20 magyar érem a Tokyo 2020 játékokról</h1>
             </div>
         </div>
     </header>
