--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -48,7 +48,7 @@
         <!-- Főoldal -->
         <div class="row">
             <div class="col">
-                <p>Az elmúlt 25 év legjobb olimpiai szereplése</p>
+                <h2>Az elmúlt 25 év legjobb olimpiai szereplése</h2>
 
                 <p>Magyarország 6 arannyal, valamint 7-7 ezüsttel és bronzzal, azaz húsz éremmel zárt a tokiói olimpián,
                     ez az utóbbi 25 év legjobb eredménye. Az 1996-os atlantai játékok óta, amikor eggyel több, 21
@@ -66,7 +66,7 @@
         <!-- Aranyérmesek -->
         <div class="row">
             <div class="col-12">
-                <p id="arany">Aranyérmesek</p>
+                <h2 id="arany">Aranyérmesek</h2>
             </div>
             <div class="col-md-4 col-lg-3">
                 <div class="card">
@@ -175,7 +175,7 @@
         <div class="row">
             <!-- Ezüstérmesek -->
             <div class="col-12 col-md-6">
-                <p id="ezust">Ezüstérmesek</p>
+                <h2 id="ezust">Ezüstérmesek</h2>
                 <div class="card">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">Siklósi Gergely
@@ -206,7 +206,7 @@
 
             <!-- Bronzérmesek -->
             <div class="col-12 col-md-6">
-                <p id="bronz">Bronzérmesek</p>
+                <h2 id="bronz">Bronzérmesek</h2>
                 <div class="card">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">Decsi Tamás, Gémesi Csanád, Szatmári András, Szilágyi Áron
@@ -235,7 +235,7 @@
         <div class="row">
             <!-- Érmék -->
             <div class="col-12 col-lg-6">
-                <p id="ermek">Az érmék</p>
+                <h2 id="ermek">Az érmék</h2>
                 <p>Az egy évvel elhalasztott olimpia és paralimpia győztesei számára összesen 5000 érmet gyártottak
                     le.</p>
                 <p>Az olimpiai érmek ebben az esztendőben egy különleges projektből kapták az alapanyagukat: 2017-19
@@ -267,7 +267,7 @@
 
             <!-- Éremtáblázat -->
             <div class="col-12 col-lg-6">
-                <p id="eremtablazat">Éremtáblázat</p>
+                <h2 id="eremtablazat">Éremtáblázat</h2>
                 <table>
                     <tr>
                         <th>Helyezés</th>
