--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -37,6 +37,10 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link text-light" href="#ermek">Érmék</a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link text-light" href="#eremtablazat">Éremtáblázat</a>
             </li>
 
