--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -121,6 +121,17 @@
 
             <div class="col-md-4 col-lg-3">
                 <div class="card">
+                    <img src="images/lorincz_tamas.jpg" class="card-img-top" alt="Lőrincz Tamás">
+                    <div class="card-body">
+                        <h5 class="card-title">Lőrincz Tamás</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Kötöttfogású birkózás 77kg</h6>
+                        <p class="card-text">„Egyszerűen hihetetlen, nem találom a szavakat, nem is emlékszem a döntő utáni másodpercekre, nem is értettem az egészet. Iszonyatosan boldog vagyok, szenzációs volt ott állni a dobogón, fogni ezt az érmet, alig várom már, hogy a gyerekeim nyakába akasszam és megöleljem őket.”</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-lg-3">
+                <div class="card">
                     <img src="images/totka_sandor.jpg" class="card-img-top" alt="Tótka Sándor">
                     <div class="card-body">
                         <h5 class="card-title">Tótka Sándor</h5>
