--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -151,7 +151,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Női kajaknégyes</h5>
                         <h6 class="card-subtitle mb-2 text-muted">K4 500m</h6>
-                        <ul>
+                        <ul id="kajak4">
                             <li>Kozák Danuta</li>
                             <li>Csipes Tamara</li>
                             <li>Bodonyi Dóra</li>
