--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -157,7 +157,7 @@
                             <li>Bodonyi Dóra</li>
                             <li>Kárász Anna</li>
                         </ul>
-                        <div></div>
+                        <div class="clearfix"></div>
                         <p class="card-text">
                             <span>Kozák Danuta</span>: „Ez a hat aranyérem hosszú élet kemény
                             munkája. Köszönöm a
