--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -159,23 +159,23 @@
                         </ul>
                         <div class="clearfix"></div>
                         <p class="card-text">
-                            <span>Kozák Danuta</span>: „Ez a hat aranyérem hosszú élet kemény
+                            <span><strong>Kozák Danuta</strong></span>: „Ez a hat aranyérem hosszú élet kemény
                             munkája. Köszönöm a
                             csapattársaknak,
                             akikkel ezt elérhettem. Köszönöm a férjemnek és a családomnak. A lányoknak, mert nélkülük
                             nem tudtam volna ezeket az érmeket megszerezni. Ez egy életre szóló siker. Sok szenvedés és
                             keserűség árán, de siker.”
-                            <span>Csipes Tamara</span>: „Minden rajtba úgy álltam be, hogy 32
+                            <span><strong>Csipes Tamara</strong></span>: „Minden rajtba úgy álltam be, hogy 32
                             éves vagyok, ennél gyorsabb már
                             nem
                             leszek. Most itt vagyok, és meg kell csinálnom. 21 éve kajakozom, ebből merítettem, nem
                             pedig az elmúlt napokból. És ez kijött az egyesben.”
-                            <span>Bodonyi Dóra</span>: „A párosban elért bronzérmünk után
+                            <span><strong>Bodonyi Dóra</strong></span>: „A párosban elért bronzérmünk után
                             csalódott voltam, azt időbe került
                             feldolgozni. Pénteken azonban már felszívtam magam, és úgy jöttem ki a pályára, hogy nyerni
                             fogunk. Azért jöttem Tokióba, hogy olimpiai bajnok legyek, és nem akartam aranyérem nélkül
                             hazamenni.”
-                            <span>Kárász Anna</span>: „Hullámzó lelkivilággal készültem az
+                            <span><strong>Kárász Anna</strong></span>: „Hullámzó lelkivilággal készültem az
                             olimpiára. Érdekes módon nálam
                             nagyon
                             hiányzott az a düh és a dac, amiről a lányok beszéltek. Tudtam, hogy mind a négyen ugyanazt
