--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -251,6 +251,7 @@
             <!-- Érmék -->
             <div class="col-12 col-lg-6">
                 <h2 id="ermek">Az érmék</h2>
+                <img src="ermek.jpg" alt="" width="100%">
                 <p>Az egy évvel elhalasztott olimpia és paralimpia győztesei számára összesen 5000 érmet gyártottak
                     le.</p>
                 <p>Az olimpiai érmek ebben az esztendőben egy különleges projektből kapták az alapanyagukat: 2017-19
