--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -72,7 +72,7 @@
             <div class="col-12">
                 <h2 id="arany">Aranyérmesek</h2>
             </div>
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-3 col-sm-6">
                 <div class="card">
                     <img src="images/szilagyi_aron.jpg" class="card-img-top" alt="Szilágyi Áron">
                     <div class="card-body">
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-3 col-sm-6">
                 <div class="card">
                     <img src="images/milak_kristof.jpg" class="card-img-top" alt="Milák Kristóf">
                     <div class="card-body">
@@ -103,7 +103,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-3 col-sm-6">
                 <div class="card">
                     <img src="images/kopasz_balint.jpg" class="card-img-top" alt="Kopasz Bálint">
                     <div class="card-body">
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-3 col-sm-6">
                 <div class="card">
                     <img src="images/lorincz_tamas.jpg" class="card-img-top" alt="Lőrincz Tamás">
                     <div class="card-body">
@@ -130,7 +130,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-3 col-sm-6">
                 <div class="card">
                     <img src="images/totka_sandor.jpg" class="card-img-top" alt="Tótka Sándor">
                     <div class="card-body">
@@ -145,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-3">
+            <div class="col-md-4 col-lg-9 col-sm-12">
                 <div class="card">
                     <img src="images/kajaknegyes.jpg" class="card-img-top" alt="Női kajaknégyes">
                     <div class="card-body">
