--- a/forrás/tokyo202020.html
+++ b/forrás/tokyo202020.html
@@ -441,9 +441,9 @@
 
     <!-- Lábléc -->
     <footer class="container">
-        <div class="row">
+        <div class="row alert alert-success">
             <div class="col">
-                <p>Források: Magyar Olimpiai Bizottság és M4 Sport</p>
+                <p>Források: <a href="webforras.txt" class="alert-link">Magyar Olimpiai Bizottság</a> és <a href="webforras.txt" class="alert-link">M4 Sport</a></p>
             </div>
         </div>
     </footer>
